Finalize navigation style changes using nav directive

--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="zero.min.js"></script>
     </head>
     
-    <body data-ng-controller="mainController as main" data-ng-cloak data-transition="fade">
+    <body data-ng-cloak data-transition="fade">
         <header>
             <icon class="logo" data-src="images/banner.svg#logo">01</icon>
             
