Close #67 form input inner shadow

--- a/wwwroot/test.htm
+++ b/wwwroot/test.htm
@@ -44,6 +44,11 @@
     </head>
     <body>
         <p>Testing!</p>
+        
+        <div class="form-group">
+            <textarea class="form-input comment-input full-width" rows="1" placeholder="Leave a comment"></textarea>
+        </div>
+        
         <button class="button-special" data-primary>
             <div class="button-special-leftcornerhighlight"></div>
             <div class="button-special-leftcornerborder"></div>
